--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -9,5 +9,5 @@ jobs:
           print("hi")
           a = 3
           print("hh")
-        shell: python
+        shell: python3
         working-directory: scripts
