--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -5,9 +5,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Display
-        run: |
-          python3
-          print("hi")
-          a = 3
-          print(a)
+        run: python3 ./scripts/test.py
         working-directory: scripts
