--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -5,5 +5,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Display
-        run: python3 ./scripts/test.py
+        run: python3 ./test.py
         working-directory: scripts
